# legal-assistant

./: .gitignore  ACTIONS_EFFECTUEES.md  AGENT_BEHAVIOR.md  AGENT_IMPROVEMENTS.md  ARCHITECTURE.md  AUDIT_TECHNIQUE_2025-12-27.md  CLAUDE.md  DIAGNOSTIC_FIX.md  MALFORMED_IDS_FIX.md  README.md  README_AUDIT.md  README_MLX.md  SHADCN_MIGRATION_PLAN.md  UI_CHANGELOG.md  debug_surreal.py  dev-stop.sh  dev.sh  docker-compose.yml  fix_malformed_doc.py  history.txt
backend/: .env.example  CAIJ_INTEGRATION.md  LOCAL_MODELS_GUIDE.md  MLX_AUTO_START.md  MLX_GUIDE.md  RAG_OPTIMIZATION.md  REFACTORING_PLAN.md  TUTEUR_IA_IMPLEMENTATION.md  clean_docusaurus_frontmatter.py  cleanup_orphan_records.py  debug_db.py  diagnostic_documents.py  exceptions.py  history.txt  main.py  migrate_case_ids.py  migrate_source_types.py  pyproject.toml  reindex_all.py  reindex_unindexed.py  reset_indexed_flag.py  run_migration.py  run_tests.sh  test_crud_manual.py  test_rag.py  test_workflow_simple.py
backend/agents/: __init__.py  legal_research_team.py
backend/auth/: __init__.py  helpers.py
backend/config/: models.py  settings.py
backend/middleware/: __init__.py  error_handler.py
backend/migrations/: 001_create_embedding_table.surql  002_academic_schema.surql  003_rename_to_course.surql  003_rename_to_course_simple.surql  004_add_pinned_field.surql  005_rename_case_id_to_course_id.surql  006_create_audio_summary_table.surql  fix_malformed_ids.py  migrate_to_course.py
backend/models/: __init__.py  admin_models.py  audio_summary_models.py  caij_models.py  case.py  course.py  document_models.py  flashcard_models.py  module_models.py  ocr_models.py  session.py  summary.py  transcription_models.py  tts_models.py
backend/routes/: __init__.py  activity.py  admin.py  analysis.py  audio_summary.py  auth.py  cases.py  chat.py  courses.py  documents.py  docusaurus.py  extraction.py  flashcards.py  judgments.py  linked_directory.py  model_servers.py  modules.py  ocr.py  sessions.py  settings.py  tools.py  transcription.py
backend/scripts/: README_BACKUP.md  backup_db.sh  check_derived_docs.py  create_admin.py  create_sessions.py  create_test_admin.py  debug_api_response.py  delete_duplicate_admins.py  fix_null_bytes.py  list_users.py  migrate_derived_documents.py  recover_course.py  restore_db.sh  set_admin_role.py  start_surreal.sh  test_caij_integration.py  test_caij_rubriques.py  test_caij_rubriques_live.py  test_indexing.py  test_semantic_search_tool.py
backend/services/: __init__.py  admin_service.py  audio_summary_service.py  auto_sync_service.py  caij_search_service.py  conversation_service.py  course_service.py  docling_service.py  document_extraction_service.py  document_indexing_service.py  document_ocr_task.py  document_service.py  document_transcription_task.py  embedding_service.py  flashcard_service.py  mlx_server_service.py  model_factory.py  model_server_manager.py  module_service.py  ocr_service.py  password_generator_service.py  prompt_builder_service.py  session_service.py  surreal_service.py  tts_service.py  tutor_service.py  user_activity_service.py  vllm_server_service.py  whisper_service.py  youtube_service.py
backend/tests/: IMPLEMENTATION_SUMMARY.md  KNOWN_ISSUES.md  README.md  __init__.py  conftest.py  test_activity.py  test_admin.py  test_auth.py  test_caij_service.py  test_chat.py  test_courses.py  test_document_features.py  test_documents.py  test_documents_refactored.py  test_flashcards.py  test_linked_directories.py  test_modules.py  test_multi_agent.py  test_semantic_search.py  test_transcription.py
backend/tools/: __init__.py  caij_search_tool.py  document_search_tool.py  entity_extraction_tool.py  legal_analysis_tool.py  semantic_search_tool.py  transcription_tool.py  tutor_tools.py  validation_tool.py
backend/utils/: __init__.py  file_utils.py  id_utils.py  text_utils.py  (+1 more)
(+274 files in other folders)
