[project]
name = "legal-assistant"
version = "0.1.0"
description = "Assistant d'etudes juridiques - Resume de jugements"
requires-python = ">=3.10"
dependencies = [
    # Framework API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    # Workflows et agents IA
    "agno>=0.1.0",
    "sqlalchemy>=2.0.0", # Required by Agno for database
    # Traitement de documents
    "pypdf>=5.1.0",
    "python-multipart>=0.0.20",
    "python-docx>=1.1.0", # Word documents
    # Base de données
    "surrealdb>=0.3.0",
    # Configuration et sécurité
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # Utilitaires
    "python-dotenv>=1.0.0",
    "email-validator>=2.3.0",
    "reportlab>=4.4.5",
    "openai>=2.8.1",
    "fastmcp>=2.13.1",
    "anthropic>=0.74.0",
    # Server-Sent Events pour streaming progression
    "sse-starlette>=2.0.0",
    "ollama>=0.6.1",
    "markitdown[pdf]>=0.1.3",
    "yt-dlp>=2025.11.12",
    # Embeddings locaux (développement)
    "sentence-transformers>=3.3.0",
    "torch>=2.6.0",
    # Whisper pour transcription (développement)
    "mlx-whisper>=0.4.0",
    # Text-to-Speech avec edge-tts (version 6.1.x stable, 7.x a des bugs)
    "edge-tts>=6.1.12,<7.0.0",
    # Docling pour extraction avancée de documents (PDF, tables, OCR)
    "docling>=2.0.0",
    # MLX-LM pour modèles Hugging Face locaux (Apple Silicon)
    "mlx>=0.24.0",
    "mlx-lm>=0.22.0",
    "sentencepiece>=0.2.0",
    # Web scraping pour recherche juridique
    "playwright>=1.48.0",
    "beautifulsoup4>=4.12.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "faker>=33.1.0",
]

# Configuration pour les LLMs locaux
# Note: mlx et mlx-lm sont maintenant installés par défaut (voir dependencies ci-dessus)

# Hugging Face (Transformers - Local)
hf = [
    "transformers>=4.48.0",
    "torch>=2.6.0",
]

# Anthropic (Claude API - Cloud)
anthropic = [
    "anthropic>=0.42.0",
]

# Ollama (Local - Cross-platform)
ollama = [
    "ollama>=0.4.0",
    "requests>=2.32.0",
]

# Docling (Document extraction - PDF, tables, OCR)
docling = [
    "docling>=2.0.0",
]

# Whisper (Audio transcription - Local)
# mlx-whisper est recommande pour Apple Silicon (meilleure qualite et performance)
whisper = [
    "mlx-whisper>=0.4.0",
]

# Fallback openai-whisper pour non-Apple Silicon
whisper-openai = [
    "openai-whisper>=20231117",
]

# Embeddings locaux (sentence-transformers avec support MPS/CUDA/CPU)
embeddings = [
    "sentence-transformers>=3.3.0",
    "torch>=2.6.0",
]

# Installer tous les providers LLM
all-llm = [
    "mlx>=0.24.0",
    "mlx-lm>=0.22.0",
    "transformers>=4.48.0",
    "torch>=2.6.0",
    "anthropic>=0.42.0",
    "ollama>=0.4.0",
    "requests>=2.32.0",
]

[tool.hatch.build.targets.wheel]
packages = ["config", "workflows", "models", "routes", "services"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
]
# Timeout for async tests (in seconds)
timeout = 300
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow tests",
]
